# drift_detect_vote

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_main.http
app/: __init__.py
app/db/: __init__.py  crud.py  database.py  models.py
app/detectors/: __init__.py  base.py  gnn.py  gnn_gat.py  isolation.py  statistical.py
app/ensemble/: __init__.py  voting.py
app/gcp/: __init__.py  monitoring.py
app/reports/: __init__.py  optimizer.py  renderer.py  store.py
app/routers/: __init__.py  drift.py  drift_gnn.py  metrics.py
app/schemas/: __init__.py  requests.py  responses.py
scripts/: create_graph.py  train_gat.py
tests/: __init__.py  conftest.py  test_api.py  test_ensemble.py  test_gnn.py  test_gnn_gat.py  test_isolation.py  test_statistical.py
