[project]
name = "drift-detect"
version = "0.1.0"
description = "Three-model voting ensemble for ML drift detection — GNN (GATConv), Statistical, and Isolation Forest — with GCP Cloud Monitoring integration."
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",

    # Numerical / ML
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # Graph neural network
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",

    # Database
    "sqlalchemy>=2.0.0",

    # GCP (optional — monitoring disabled gracefully when absent)
    "google-cloud-monitoring>=2.18.0",
    "google-cloud-storage>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]